--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
+    //compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
     compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time'
     implementation 'com.querydsl:querydsl-jpa'
 
