--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     //implementation 'com.querydsl:querydsl-jpa'
 
     implementation 'mysql:mysql-connector-java' // mysql
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.5' // 비밀번호 암호화
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.5' // 비밀번호 암호화
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4' // Jasypt // 데이터베이스 접속정보 암호화
 }
 
 test {
