데이터베이스 접속정보 암호화 비밀번호 파일 별도 처리

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ out/
 
 ### VS Code ###
 .vscode/
-src/main/resources/application.properties
+#src/main/resources/application.properties
+src/main/resources/jasyptPassword.properties
 gradle/
 out/
