--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'mysql:mysql-connector-java' // mysql
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.5' // 비밀번호 암호화
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4' // Jasypt // 데이터베이스 접속정보 암호화
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0' // mybatis
 }
 
 test {
