--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.show-sql=true
 spring.devtools.livereload.enabled=true
 spring.devtools.remote.restart.enabled=false
 spring.thymeleaf.cache=false
-spring.freemarker.cache = false
+spring.freemarker.cache=false
 
 # 타임리프 설정
 spring.thymeleaf.enabled=true
@@ -35,3 +35,6 @@ spring.messages.basename=messages
 # 디버깅 레벨 설정
 logging.level.root=info
 logging.level.hello.springmvc=debug
+
+# mybatis
+mybatis.mapper-locations=classpath:mapper/*.xml
