커넥션풀 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,7 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 # 로깅 대상과 연결 여부 확인을 위한 테스트 쿼리
 logging.config=classpath:logback.xml
 #spring.datasource.hikari.connection-test-query=SELECT 1
+
+# 커넥션 풀 설정
+spring.datasource.hikari.minimumIdle=3
+spring.datasource.hikari.maximumPoolSize=3
