--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4' // Jasypt // 데이터베이스 접속정보 암호화
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2' // mybatis
     compile group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16' // log4j2
+    testCompile('org.projectlombok:lombok') // 테스트에서 롬복 사용
+    testAnnotationProcessor('org.projectlombok:lombok') // 테스트에서 롬복 사용
 }
 
 test {
