서비스 빈 설정 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ jasypt.encryptor.password=null
 
 # JPA 세팅 (log4j2에서 출력)
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=false
 
 # 리소스 및 캐시 세팅
