깃 이그노어 파일 수정

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### properties ###
 #src/main/resources/application.properties
 src/main/resources/jasyptPassword.properties
 out/
