--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,9 @@ logging.level.hello.springmvc=debug
 
 # mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=shop.qtmspc.entity
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.shop.qtmspc.mapper=trace
 
 # 로깅 대상과 연결 여부 확인을 위한 테스트 쿼리
 logging.config=classpath:logback.xml
