--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16' // log4j2
     testCompile('org.projectlombok:lombok') // 테스트에서 롬복 사용
     testAnnotationProcessor('org.projectlombok:lombok') // 테스트에서 롬복 사용
+    implementation 'io.jsonwebtoken:jjwt:0.9.1' // jwt
 }
 
 test {
