--- a/build.gradle
+++ b/build.gradle
@@ -25,31 +25,52 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.projectlombok:lombok'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+    // thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // lombok
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'org.projectlombok:lombok'
+
+    // 내장 tomcat
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.7.1'
+
+    // test code
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    testImplementation 'org.springframework.security:spring-security-test'
-    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
 
-    implementation 'com.querydsl:querydsl-jpa:5.0.0' // querydsl
-    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0' // querydsl
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time' // 타임리프
-    implementation 'mysql:mysql-connector-java' // mysql
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security' // 비밀번호 암호화
-    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4' // Jasypt // 데이터베이스 접속정보 암호화
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2' // mybatis
-    implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16' // log4j2
-    testImplementation('org.projectlombok:lombok') // 테스트에서 롬복 사용
-    testAnnotationProcessor('org.projectlombok:lombok') // 테스트에서 롬복 사용
-    implementation 'io.jsonwebtoken:jjwt:0.9.1' // jwt
+    // querydsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0'
+
+    // mysql
+    implementation 'mysql:mysql-connector-java:8.0.29'
+
+    // Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.7.1'
+
+    // Jasypt // 데이터베이스 접속정보 암호화
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
+
+    // mybatis
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+
+    // log4j2
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+
+    // 테스트에서 롬복 사용
+    testImplementation('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 test {
