--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,7 @@ logging.config=classpath:logback.xml
 # 커넥션 풀 설정
 spring.datasource.hikari.minimumIdle=3
 spring.datasource.hikari.maximumPoolSize=3
+
+# Swagger (컨트롤러 핸들러 매칭 ant_path_matcher -> path_pattern_parser)
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
